# cdp_slush_fund

./: .env  README.md  package-lock.json  package.json  pyproject.toml
backend/: app.py  cdp_payments.py  encrypted_seed.json  run_payments.py  wallet.json
src/: App.css  App.js
