[tool.poetry]
name = "cdpsdktemplate"
version = "0.1.0"
description = "Template for payments using CDP SDK in Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cdp-sdk = "^0.0.2"
python-dotenv = "^1.0.0"
cdp = "^0.0.2"
flask = "^3.0.3"
flask-cors= "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"